--- a/index.html
+++ b/index.html
@@ -13,46 +13,185 @@
     <title>Frontend Mentor | Maker pre-launch landing page</title>
   </head>
   <body>
-    <!-- Get paid for the work you love to do.
+    <div class="container">
+      <nav>
+        <img src="./assets/images/logo.svg" alt="Maker Logo" />
+      </nav>
 
-  The 9-5 grind is so last century. We believe in living life on your 
-  own terms. Whether you’re looking to escape the rat race or set up 
-  a side hustle, we’ve got you covered.
+      <main>
+        <section class="hero">
+          <div class="hero__image--mobile">
+            <img
+              src="./assets/images/illustration-hero-mobile.png"
+              alt="Hero Image Mobile"
+            />
+          </div>
 
-  Indulge your passions
-  Your passions shouldn't be just for the weekend. Earn a living doing what you love.
+          <div class="hero__image--left">
+            <img
+              src="./assets/images/illustration-hero-left.svg"
+              alt="Hero Image Mobile"
+            />
+          </div>
 
-  Gain financial freedom
-  Start making money work for you. There’s nothing quite like earning while you sleep. 
+          <div class="hero__text">
+            <h1>Get paid for the work you <span>love</span> to do.</h1>
 
-  Choose your lifestyle
-  Own your daily schedule. Fancy a lie-in? Go for it! Take charge of your week.
+            <p>
+              The 9-5 grind is so last century. We believe in living life on
+              your own terms. Whether you’re looking to escape the rat race or
+              set up a side hustle, we’ve got you covered.
+            </p>
 
-  Work from anywhere
-  Selling online means not being pinned down. Want to work AND travel? Go for it!
+            <img src="./assets/images/icon-scroll.svg" alt="Scroll Icon" />
+          </div>
+        </section>
 
-  Our pricing plans
-  We only make money when our creators make money. Our plans are always affordable, and 
-  it’s completely free to get started.
+        <section class="features">
+          <div class="feature feature--1">
+            <img
+              src="./assets/images/illustration-passions.svg"
+              alt="Passion Icon"
+            />
 
-  Dip your toe
-  Just getting started? No problem at all! Our free plan will take you a long way.
-  Free
-  Unlimited products
-  Basic analytics
-  Limited marketplace exposure
-  10% fee per transaction
+            <h2>Indulge your passions</h2>
 
-  Dive right in
-  Ready for the big time? Our paid plan will help you take your business to the next level.
-  $25.00 /month
-  Custom domain
-  Advanced analytics and reports
-  High marketplace visibility
-  5% fee per transaction
+            <p>
+              Your passions shouldn't be just for the weekend. Earn a living
+              doing what you love.
+            </p>
+          </div>
 
-  Get notified when we launch
-  Email address
-  Get notified -->
+          <div class="feature feature--2">
+            <img
+              src="./assets/images/illustration-financial-freedom.svg"
+              alt="Financial Icon"
+            />
+
+            <h2>Gain financial freedom</h2>
+
+            <p>
+              Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
+              your week.
+            </p>
+          </div>
+
+          <div class="feature feature--2">
+            <img
+              src="./assets/images/illustration-lifestyle.svg"
+              alt="Lifestyle Icon"
+            />
+
+            <h2>Choose your lifestyle</h2>
+
+            <p>
+              Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
+              your week.
+            </p>
+          </div>
+
+          <div class="feature feature--2">
+            <img
+              src="./assets/images/illustration-work-anywhere.svg"
+              alt="Work Anywhere Icon"
+            />
+
+            <h2>Work from anywhere</h2>
+
+            <p>
+              Selling online means not being pinned down. Want to work AND
+              travel? Go for it!
+            </p>
+          </div>
+        </section>
+
+        <section class="prices">
+          <h2>Our pricing plans</h2>
+
+          <p>
+            We only make money when our creators make money. Our plans are
+            always affordable, and it’s completely free to get started.
+          </p>
+
+          <div class="prices__cards">
+            <div class="price__card price__card--1">
+              <img src="./assets/images/icon-free.svg" alt="Free Icon" />
+
+              <h3>Dip your toe</h3>
+
+              <p>
+                Just getting started? No problem at all! Our free plan will take
+                you a long way. Free
+              </p>
+
+              <h4>Free</h4>
+
+              <ul>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  Unlimited products
+                </li>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  Basic analytics
+                </li>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  Limited marketplace exposure
+                </li>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  10% fee per transaction
+                </li>
+              </ul>
+            </div>
+
+            <div class="price__card price__card--1">
+              <img src="./assets/images/icon-paid.svg" alt="Paid Icon" />
+
+              <h3>Dive right in</h3>
+
+              <p>
+                Ready for the big time? Our paid plan will help you take your
+                business to the next level.
+              </p>
+
+              <h4>$25.00 /month</h4>
+
+              <ul>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  Custom domain
+                </li>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  Advanced analytics and reports
+                </li>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  High marketplace visibility
+                </li>
+                <li>
+                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  5% fee per transaction
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <footer>
+        <h2>Get notified when we launch</h2>
+
+        <form>
+          <input type="email" placeholder="Email address" />
+
+          <button>Get notified</button>
+
+          <p>Oops! That doesn’t look like an email address</p>
+        </form>
+      </footer>
+    </div>
   </body>
 </html>
