Style nav, hero, and features for mobile devices

--- a/index.html
+++ b/index.html
@@ -18,35 +18,42 @@
         <img src="./assets/images/logo.svg" alt="Maker Logo" />
       </nav>
 
+      <section class="hero">
+        <div class="hero__image--mobile">
+          <img
+            src="./assets/images/illustration-hero-mobile.png"
+            alt="Hero Image Mobile"
+          />
+        </div>
+
+        <div class="hero__image--left">
+          <img
+            src="./assets/images/illustration-hero-left.svg"
+            alt="Hero Image Mobile"
+          />
+        </div>
+
+        <div class="hero__text">
+          <h1>Get paid for the work you <span>love</span> to do.</h1>
+
+          <p>
+            The 9-5 grind is so last century. We believe in living life on your
+            own terms. Whether you’re looking to escape the rat race or set up a
+            side hustle, we’ve got you covered.
+          </p>
+
+          <img src="./assets/images/icon-scroll.svg" alt="Scroll Icon" />
+        </div>
+
+        <div class="hero__image--right">
+          <img
+            src="./assets/images/illustration-hero-right.svg"
+            alt="Hero Image Mobile"
+          />
+        </div>
+      </section>
+
       <main>
-        <section class="hero">
-          <div class="hero__image--mobile">
-            <img
-              src="./assets/images/illustration-hero-mobile.png"
-              alt="Hero Image Mobile"
-            />
-          </div>
-
-          <div class="hero__image--left">
-            <img
-              src="./assets/images/illustration-hero-left.svg"
-              alt="Hero Image Mobile"
-            />
-          </div>
-
-          <div class="hero__text">
-            <h1>Get paid for the work you <span>love</span> to do.</h1>
-
-            <p>
-              The 9-5 grind is so last century. We believe in living life on
-              your own terms. Whether you’re looking to escape the rat race or
-              set up a side hustle, we’ve got you covered.
-            </p>
-
-            <img src="./assets/images/icon-scroll.svg" alt="Scroll Icon" />
-          </div>
-        </section>
-
         <section class="features">
           <div class="feature feature--1">
             <img
