Style prices card

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               alt="Passion Icon"
             />
 
-            <h2>Indulge your passions</h2>
+            <h3>Indulge your passions</h3>
 
             <p>
               Your passions shouldn't be just for the weekend. Earn a living
@@ -75,7 +75,7 @@
               alt="Financial Icon"
             />
 
-            <h2>Gain financial freedom</h2>
+            <h3>Gain financial freedom</h3>
 
             <p>
               Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
@@ -89,7 +89,7 @@
               alt="Lifestyle Icon"
             />
 
-            <h2>Choose your lifestyle</h2>
+            <h3>Choose your lifestyle</h3>
 
             <p>
               Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
@@ -121,8 +121,12 @@
           </p>
 
           <div class="prices__cards">
-            <div class="price__card price__card--1">
-              <img src="./assets/images/icon-free.svg" alt="Free Icon" />
+            <div class="prices__card prices__card--1">
+              <img
+                class="prices__icon"
+                src="./assets/images/icon-free.svg"
+                alt="Free Icon"
+              />
 
               <h3>Dip your toe</h3>
 
@@ -153,8 +157,12 @@
               </ul>
             </div>
 
-            <div class="price__card price__card--1">
-              <img src="./assets/images/icon-paid.svg" alt="Paid Icon" />
+            <div class="prices__card prices__card--2">
+              <img
+                class="prices__icon"
+                src="./assets/images/icon-paid.svg"
+                alt="Paid Icon"
+              />
 
               <h3>Dive right in</h3>
 
