Style price card elements

--- a/index.html
+++ b/index.html
@@ -139,19 +139,31 @@
 
               <ul>
                 <li>
-                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  <img
+                    src="./assets/images/icon-check-2.svg"
+                    alt="Check Icon"
+                  />
                   Unlimited products
                 </li>
                 <li>
-                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  <img
+                    src="./assets/images/icon-check-2.svg"
+                    alt="Check Icon"
+                  />
                   Basic analytics
                 </li>
                 <li>
-                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  <img
+                    src="./assets/images/icon-check-2.svg"
+                    alt="Check Icon"
+                  />
                   Limited marketplace exposure
                 </li>
                 <li>
-                  <img src="./assets/images/icon-check.svg" alt="Check Icon" />
+                  <img
+                    src="./assets/images/icon-check-2.svg"
+                    alt="Check Icon"
+                  />
                   10% fee per transaction
                 </li>
               </ul>
@@ -171,7 +183,7 @@
                 business to the next level.
               </p>
 
-              <h4>$25.00 /month</h4>
+              <h4>$25.00 <span>/month</span></h4>
 
               <ul>
                 <li>
