Style footer for mobile devices

--- a/index.html
+++ b/index.html
@@ -209,7 +209,14 @@
       </main>
 
       <footer>
-        <h2>Get notified when we launch</h2>
+        <div>
+          <h2>Get notified when we launch</h2>
+
+          <img
+            src="./assets/images/bg-footer-squiggle.svg"
+            alt="Squiggle Illistration"
+          />
+        </div>
 
         <form>
           <input type="email" placeholder="Email address" />
